<resources>
    <!-- GENERAL -->
    <string name="app_name">Remy</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Explorar</string>
    <string name="title_notifications">Perfil</string>
    <string name="title_chango">Carrito</string>
    <string name="title_inventory">Inventario</string>
    <string name="loading">Cargando...</string>

    <!--  Pantalla Home  -->
    <string name="home_title">Solo ingredientes disponibles</string>

    <!--  Pantalla Explorar  -->

    <!-- Shared Preference  -->
    <string name="preference_file">sharedPreference</string>


    <!-- Layout -->

    <!-- activity_contacts -->
    <string name="ac_contacts_buscar_contacto">Buscar contacto...</string>

    <!-- activity_detail_recipe -->
    <string name="recipe_detail_nombre_default">Nombre de la comida</string>
    <string name="ac_d_recipe_categoria">Categoria</string>
    <string name="ac_d_recipe_rating">Calificación</string>
    <string name="ac_d_recipe_tiempo">Tiempo</string>
    <string name="ac_d_recipe_ingredientes">Ingredientes</string>
    <string name="ac_d_recipe_cocinar">Cocinar</string>

    <string name="recipe_detail_tiempo_default">20 minutos</string>

    <!-- activity_login -->
    <string name="ac_login_usuario">Usuario</string>
    <string name="ac_login_password">Contraseña</string>
    <string name="ac_login_olvido_password">¿Olvidó su contraseña?</string>
    <string name="ac_login_ingresar">INGRESAR</string>
    <string name="ac_login_nueva_cuenta">Crear nueva cuenta</string>


    <!-- activity_register -->
    <string name="ac_register_usuario">Ingrese un usuario</string>
    <string name="ac_register_email">Ingrese un email</string>
    <string name="ac_register_password">Ingrese una contraseña</string>
    <string name="ac_register_password_2">Repetir contraseña</string>
    <string name="ac_register_crear_cuenta">CREAR CUENTA</string>


    <!-- dialog_add_ingredient -->
    <string name="d_ingredient_ingrediente_agregar">Elegir ingrediente</string>
    <string name="d_ingredient_cantidad">Cantidad</string>
    <string name="d_ingredient_unidad">Unidad</string>
    <string name="d_ingredient_titulo">Agregar ingrediente al inventario</string>
    <string name="d_ingredient_cancelar">Cancelar</string>
    <string name="d_ingredient_confirmar">Agregar</string>

    <!-- event_item -->
    <string name="i_event_asistentes">Invitados:</string>

    <!-- fragment_chango | fragment_inventoru-->
    <string name="f_buscar_ingrediente">Buscar ingrediente...</string>

    <!-- fragment_inicio -->
    <string name="f_inicio_si"> </string>
    <string name="f_inicio_no"> </string>

    <!-- fragment_perfil -->
    <string name="f_perfil_alimenticio">Perfil alimenticio</string>
    <string name="f_perfil_Contactos">Contactos</string>
    <string name="f_perfil_eventos">Eventos</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>

    <!-- recommended_item -->
    <string name="i_recommended_minutos">min</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Sort in their Hogwarts houses -->
    <string name="logo">Logo</string>
    <string name="ac_event_detail_invitados">Invitados</string>
    <string name="ac_event_detail_anfitrion">Anfitrión</string>
    <string name="ac_event_detail_recipe_recommendations">Sugerencias de recetas</string>
    <string name="ac_event_detail_add_btn">Agregar invitados</string>
    <string name="unloaded_text">...</string>
    <string name="ac_event_detail_nombre_del_evento">Nombre del evento</string>
    <string name="ac_event_detail_fecha">Fecha</string>
    <string name="ac_inventory_confirm_btn">Confirmar</string>
    <string name="ac_main_text_logo">Text logo</string>
    <string name="ac_main_remy_logo_in_drawer">Remy logo in drawer</string>
    <string name="recipe_image_description">Recipe image</string>
    <string name="ac_new_event_name_hint">Nombre del evento</string>
    <string name="ac_new_event_date_hint">Fecha</string>
    <string name="ac_new_event_time_hint">Hora</string>
    <string name="ac_new_event_create_btn">Crear evento</string>
    <string name="ac_new_event_shared_inventory_selector">Inventario compartido</string>
    <string name="ac_new_event_intro">Crea un evento con amigos y obtengan recomendaciones de recetas para su próxima juntada.</string>
    <string name="ac_contacts_add_contact_fab">Add contact FAB</string>
    <string name="ac_events_create_event_fab">Create new event</string>
    <string name="ac_new_contact_search_hint">Ingrese el nombre del contacto...</string>
    <string name="d_list_friends_title">Amigos</string>
    <string name="d_list_friend_add_friend_fab">Add friend fab</string>
    <string name="i_event_fecha_title">Fecha:</string>
    <string name="ac_events_title">Sus eventos</string>
    <string name="f_chango_agregar_al_chango_fab">Agregar al chango fab</string>
    <string name="f_inventory_add_to_inventory_fab">Add to inventory fab</string>
    <string name="f_inventory_escanear_producto_para_inventario_fab">Escanear producto para inventario fab</string>
    <string name="f_perfil_alimentos_prohibidos">Alimentos prohibidos</string>
    <string name="f_perfil_agregar_alimento_prohibido_btn">Agregar alimento prohibido seleccionado</string>
    <string name="f_perfil_inventario_seleccionado_title">Inventario seleccionado</string>
    <string name="f_perfil_ingresar_forbidden_hint">Ingresar nuevo alimento prohibido</string>
    <string name="f_perfil_crear_inventario_hint">Nombre para inventario nuevo</string>
    <string name="f_perfil_title">Su perfil</string>
    <string name="f_perfil_agregar_inventario_nuevo_btn">Agregar inventario nuevo btn</string>
    <string name="ac_contacts_solicitudes_section_title">Solicitudes de amistad</string>
    <string name="ac_contacts_contactos_section_title">Contactos</string>
    <string name="ac_new_contact_header">Buscar contactos</string>
    <string name="ac_recipes_cooked_header">Recetas cocinadas</string>
    <string name="ac_places_header">Su lugar</string>

    <!--    TODO: Ordenar strings-->
</resources>
