<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailEventActivity">

    <TextView
        android:id="@+id/event_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ac_event_detail_nombre_del_evento"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/ginsboro"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/event_detail_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingBottom="15dp"
        android:text="@string/ac_event_detail_fecha"
        android:textSize="16sp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:minHeight="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/ginsboro"
                    android:textStyle="bold"
                    android:text="@string/ac_event_detail_anfitrion"
                    />

                <TextView
                    android:id="@+id/event_detail_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/unloaded_text"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/event_invitados"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:minHeight="90dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/ac_event_detail_invitados"
                    android:textColor="@color/ginsboro"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/event_detail_number_attendees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/unloaded_text"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/event_add_person_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="-90px"
        android:layout_marginHorizontal="25dp"
        app:borderWidth="0dp"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/ac_event_detail_add_btn"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/ac_event_detail_recipe_recommendations"
        android:textSize="18sp"
        android:textColor="@color/ginsboro"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/dynamic_recommendations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

    </ScrollView>

    <!--<include layout="@layout/recommended_item" />

    <include layout="@layout/recommended_item" />-->

</LinearLayout>
