<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: add/replace with LinearLayout to make this much easier -->

<!--    <TextView-->
<!--        android:id="@+id/contacts_title"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="7dp"-->
<!--        android:padding="15dp"-->
<!--        android:background="@color/darkgrey"-->
<!--        android:text="@string/ac_contacts_contactos_section_title"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        android:textAlignment="center"-->
<!--        />-->
<!--    android:layout_below="@id/contacts_title"-->

    <SearchView
        android:id="@+id/contact_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:queryHint="@string/ac_contacts_buscar_contacto"
        />

    <TextView
        android:id="@+id/contact_title_invites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_search"
        android:padding="10dp"
        android:text="@string/ac_contacts_solicitudes_section_title"
        android:textColor="@color/white"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/contact_pending_invites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_title_invites"
        />

    <TableRow
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/contact_pending_invites"
        android:background="#444">

    </TableRow>

    <TextView
        android:id="@+id/contact_title_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hr"
        android:padding="10dp"
        android:text="@string/ac_contacts_contactos_section_title"
        android:textColor="@color/white"
        />

    <ListView
        android:id="@+id/contact_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_title_contacts"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/contact_floating_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/ac_contacts_add_contact_fab"
        />

</RelativeLayout>
