<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailRecipeActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <ImageView
                android:id="@+id/detail_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/wrap"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="6dp"
            android:paddingHorizontal="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/detail_recipe_add_cart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginHorizontal="7dp"
                android:layout_marginVertical="10dp"
                android:paddingHorizontal="14dp"
                android:drawableStart="@drawable/ic_baseline_add_shopping_cart_24"
                android:drawableTint="@color/white"
                android:drawablePadding="10dp"
                android:text="Agregar al Carrito"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/button_background2"
                />

            <TextView
                android:id="@+id/detail_recipe_cook"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginHorizontal="7dp"
                android:layout_marginVertical="10dp"
                android:paddingHorizontal="14dp"
                android:drawableStart="@drawable/ic_baseline_restaurant_menu_24"
                android:drawableTint="@color/white"
                android:drawablePadding="10dp"
                android:text="@string/ac_d_recipe_cocinar"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/button_background"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/detail_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/ginsboro"
            android:textAlignment="center"
            android:text="@string/recipe_detail_nombre_default"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:gravity="center_horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="8dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="7dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:textColor="@color/ginsboro"
                        android:textStyle="bold"
                        android:text="@string/ac_d_recipe_rating"/>

                    <TextView
                        android:id="@+id/detail_recipe_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:text="* * * * *"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="5dp"
                app:cardCornerRadius="8dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="7dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:textColor="@color/ginsboro"
                        android:textStyle="bold"
                        android:text="@string/ac_d_recipe_tiempo"/>

                    <TextView
                        android:id="@+id/detail_recipe_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="3dp"
                        android:text="@string/recipe_detail_tiempo_default"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="15dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/ac_d_recipe_ingredientes"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@color/darkgrey"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/detail_recipe_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="12dp"
                android:lineSpacingExtra="10sp"
                android:text="\t- Ingrediente 1 \n\t- Ingrediente 2 \n\t- Ingrediente 3\n\t..." />

        </androidx.cardview.widget.CardView>

<!--        <TextView
            android:layout_marginTop="30px"
            android:layout_marginLeft="25px"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_d_recipe_instrucciones"/>

        <androidx.cardview.widget.CardView
            android:layout_margin="25px"
            app:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="30px"
                android:paddingBottom="30px"
                android:layout_marginTop="15px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\t1. Paso numero 1 \n\t2. Paso numero 2 \n\t3. Paso numero 3\n\t..."/>

        </androidx.cardview.widget.CardView>-->

    </LinearLayout>
</ScrollView>
